# rsocket-rust

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.chglog/: config.yml
.github/: dependabot.yml
examples/: Cargo.toml  cli.rs  docker-compose.yml  echo-uds-client.rs  echo-uds.rs  echo.rs  echo_uds_client.rs  postgres.rs  proxy.rs  qps.rs  redis.rs
examples/echo/: main.rs
examples/echo_client/: main.rs
examples/proxy/: main.rs
examples/tls/: README.md  cert.pem  client.rs  foobar.com-key.pem  foobar.com.p12  foobar.com.pem  identity.p12  server.rs
rsocket/: Cargo.toml  README.md
rsocket-benchmark/: Cargo.toml  benchmark_main.rs
rsocket-benchmark/benchmarks/: fibonaccis.rs  frames.rs  mod.rs
rsocket-messaging/: Cargo.toml  README.md
rsocket-messaging/src/: builder.rs  lib.rs  misc.rs  requester.rs
rsocket-test/: Cargo.toml  README.md
rsocket-test/tests/: clients.rs  test_clients.rs  test_composite_metadata.rs  test_frames.rs  test_messaging.rs  test_mimes.rs  test_routing_metadata.rs  test_stream_cancellation.rs
rsocket-transport-tcp/: Cargo.toml  README.md
rsocket-transport-tcp/src/: client.rs  codec.rs  lib.rs  misc.rs  server.rs
rsocket-transport-tcp/src/client/: mod.rs  tcp.rs  tls.rs  uds.rs
rsocket-transport-tcp/src/connection/: codec.rs  mod.rs  tcp.rs  tls.rs  uds.rs
rsocket-transport-tcp/src/server/: mod.rs  tcp.rs  tls.rs  uds.rs
rsocket-transport-unix/: Cargo.toml  README.md
rsocket-transport-unix/src/: client.rs  lib.rs  server.rs
rsocket-transport-wasm/: Cargo.toml  README.md
rsocket-transport-wasm/src/: client.rs  connection.rs  lib.rs  misc.rs  runtime.rs
rsocket-transport-websocket/: Cargo.toml  README.md
rsocket-transport-websocket/src/: client.rs  connection.rs  lib.rs  server.rs
rsocket/src/: error.rs  extension.rs  lib.rs  mime.rs  misc.rs  prelude.rs  result.rs  spi.rs  utils.rs
rsocket/src/core/: client.rs  factory.rs  mod.rs  server.rs
rsocket/src/extension/: composite.rs  mime.rs  mod.rs  routing.rs
rsocket/src/frame/: cancel.rs  error.rs  keepalive.rs  lease.rs  metadata_push.rs  mod.rs  payload.rs  request_channel.rs  request_fnf.rs  request_n.rs  request_response.rs  request_stream.rs  resume.rs  resume_ok.rs  setup.rs  utils.rs  version.rs
rsocket/src/macros/: composite.rs  mod.rs  routing.rs
rsocket/src/payload/: misc.rs  mod.rs  normal.rs  setup.rs
rsocket/src/runtime/: mod.rs
rsocket/src/transport/: codec.rs  fragmentation.rs  local.rs  misc.rs  mod.rs  socket.rs  spi.rs  tcp.rs
rsocket/src/x/: client.rs  factory.rs  server.rs
rsocket/tests/: clients.rs  composite_metadata_test.rs  frames.rs  routing_metadata_test.rs
scripts/: generate-certificate.sh
src/: errors.rs  extension.rs  frame.rs  lib.rs  mime.rs  prelude.rs  result.rs  spi.rs
src/core/: api.rs  callers.rs  misc.rs  mod.rs  socket.rs  spi.rs
src/frame/: cancel.rs  error.rs  keepalive.rs  lease.rs  metadata_push.rs  mod.rs  payload.rs  request_channel.rs  request_fnf.rs  request_n.rs  request_response.rs  request_stream.rs  resume.rs  resume_ok.rs  setup.rs  utils.rs  version.rs
src/payload/: default.rs  mod.rs  setup.rs
src/transport/: codec.rs  conn.rs  misc.rs  mod.rs  socket.rs  spi.rs  tcp.rs
src/x/: client.rs  factory.rs  mod.rs  server.rs  uri.rs
tests/: api_test.rs  async_await_test.rs  client_test.rs  clients.rs  composite_metadata_test.rs  foobar.rs  foobar_test.rs  frame_test.rs  frames.rs  mime_test.rs  routing_metadata_test.rs  server_test.rs  socket_test.rs  test_extension.rs  transport_test.rs
