[package]
name = "rsocket_rust"
version = "0.1.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jjeffcaii/rsocket-rust"
homepage = "https://github.com/jjeffcaii/rsocket-rust"
description = "rsocket-rust is an implementation of the RSocket protocol in Rust."

[dependencies]
log = "0.4.8"
bytes = "0.4.12"
futures = "0.1.29"
tokio = "0.1.22"

[dev-dependencies]
env_logger = "0.6.2"
hex = "0.3.2"

[[example]]
name = "echo"
path = "examples/echo/main.rs"

[[example]]
name = "proxy"
path = "examples/proxy/main.rs"
