[package]
name = "examples"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
publish = false

[dev-dependencies]
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
clap = "2.33.3"
tokio-postgres = "0.6.0"
redis = "0.17.0"

[dev-dependencies.rsocket_rust]
version = "0.6.0"

[dev-dependencies.rsocket_rust_transport_tcp]
version = "0.6.0"

[dev-dependencies.rsocket_rust_transport_websocket]
version = "0.6.0"

[dev-dependencies.tokio]
version = "0.3.5"
default-features = false
features = ["full"]

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "cli"
path = "cli.rs"

[[example]]
name = "qps"
path = "qps.rs"

[[example]]
name = "postgres"
path = "postgres.rs"

[[example]]
name = "redis"
path = "redis.rs"
