[package]
name = "examples"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
publish = false

[dev-dependencies]
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
clap = "2.33.3"

[dev-dependencies.rsocket_rust]
path = "../rsocket"

[dev-dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
features = ["tls"]

[dev-dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"

[dev-dependencies.tokio]
version = "0.3.6"
default-features = false
features = ["full"]

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "cli"
path = "cli.rs"

[[example]]
name = "qps"
path = "qps.rs"

[[example]]
name = "tls-server"
path = "tls/server.rs"

[[example]]
name = "tls-client"
path = "tls/client.rs"