[package]
name = "rsocket_rust_benchmark"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
publish = false

[dev-dependencies]
log = "0.4"
futures = "0.3.5"
env_logger = "0.7.1"
bytes = "0.5.6"
hex = "0.4.2"
rand = "0.7.3"
serde = "1.0.116"
serde_derive = "1.0.116"
criterion = "0.3.3"

[dev-dependencies.rsocket_rust]
version = "0.5.3"
features = ["frame"]

[dev-dependencies.rsocket_rust_transport_tcp]
version = "0.5.3"

[dev-dependencies.rsocket_rust_transport_websocket]
version = "0.5.3"

[dev-dependencies.rsocket_rust_messaging]
version = "0.5.3"

[dev-dependencies.tokio]
version = "0.2.22"
default-features = false
features = ["full"]

[[bench]]
name = "bench_main"
path = "benchmark_main.rs"
harness = false