[package]
name = "rsocket_rust_messaging"
version = "0.6.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Communicate with Spring RSocket Messaging."

[dependencies]
futures = "0.3.7"
bytes = "0.6.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_cbor = "0.11.1"
hex = "0.4.2"
url = "2.2.0"

[dependencies.rsocket_rust]
path = "../rsocket"
features = ["frame"]

[dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"

[dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
