[package]
name = "rsocket_rust_test"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
publish = false

[dev-dependencies]
log = "0.4.14"
futures = "0.3.15"
env_logger = "0.8.3"
bytes = "1.0.1"
hex = "0.4.3"
rand = "0.8.3"
serde = "1.0.126"
serde_derive = "1.0.126"

[dev-dependencies.rsocket_rust]
path = "../rsocket"
features = ["frame"]

[dev-dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"

[dev-dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"

[dev-dependencies.rsocket_rust_messaging]
path = "../rsocket-messaging"

[dev-dependencies.tokio]
version = "1.0.3"
default-features = false
features = ["full"]
