[package]
name = "rsocket_rust_transport_tcp"
version = "0.7.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "TCP RSocket transport implementation."

[features]
default = []
tls = ["tokio-native-tls"]

[dependencies]
log = "0.4.13"
futures = "0.3.10"
bytes = "1.0.1"

[dependencies.rsocket_rust]
path = "../rsocket"
features = ["frame"]

[dependencies.tokio]
version = "1.0.1"
default-features = false
features = [ "rt", "rt-multi-thread", "net", "sync", "io-util", "macros" ]

[dependencies.tokio-util]
version = "0.6.1"
default-features = false
features = ["codec"]

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"
