[package]
name = "rsocket_rust_transport_unix"
version = "0.5.3"
authors = ["seal <578935869@qq.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Unix Domain Socket RSocket transport implementation."

[dependencies]
log = "0.4.8"
futures = "0.3.5"
bytes = "0.5.4"

[dependencies.rsocket_rust]
version = "0.5.3"
features = ["frame"]

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = [ "rt-core", "rt-threaded", "uds", "sync", "stream" ]

[dependencies.tokio-util]
version = "0.3.1"
default-features = false
features = ["codec"]