[package]
name = "rsocket_rust_transport_wasm"
version = "0.7.1"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "WASM Websocket RSocket transport implementation."

[dependencies]
bytes = "1.0.1"
wasm-bindgen-futures = "0.4.19"
futures-channel = "0.3.10"
futures-util = "0.3.10"
js-sys = "0.3.46"
serde = "1.0.119"
serde_derive = "1.0.119"
async-trait = "0.1.42"
log = "0.4.13"

[dependencies.rsocket_rust]
path = "../rsocket"
features = ["frame"]

[dependencies.wasm-bindgen]
version = "0.2.69"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.46"
features = [
  "FileReader",
  "ProgressEvent",
  "Blob",
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "Event",
]
