[package]
name = "rsocket_rust_transport_websocket"
version = "0.7.1"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Websocket RSocket transport implementation."

[dependencies]
log = "0.4.13"
futures = "0.3.10"
bytes = "1.0.1"
url = "2.2.0"
tokio-tungstenite = "0.13.0"

[dependencies.rsocket_rust]
path = "../rsocket"
features = ["frame"]

[dependencies.tokio]
version = "1.0.1"
default-features = false
features = [ "rt", "rt-multi-thread", "net", "sync"]
