[package]
name = "rsocket_rust_transport_websocket"
version = "0.7.3"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Websocket RSocket transport implementation."

[dependencies]
log = "0.4.14"
futures = "0.3.15"
bytes = "1.0.1"
url = "2.2.2"
tokio-tungstenite = "0.13.0"

[dependencies.rsocket_rust]
version = "0.7"
features = ["frame"]

[dependencies.tokio]
version = "1.0.3"
default-features = false
features = [ "macros", "rt", "rt-multi-thread", "net", "sync"]
