[package]
name = "rsocket_rust"
version = "0.7.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "rsocket-rust is an implementation of the RSocket protocol in Rust."

[dependencies]
log = "0.4.11"
bytes = "0.6.0"
futures = "0.3.8"
lazy_static = "1.4.0"
async-trait = "0.1.42"
dashmap = "4.0.1"
thiserror = "1.0.23"
anyhow = "1.0.36"
async-stream = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.19"

[dependencies.tokio]
version = "0.3.6"
default-features = false
features = [ "rt", "rt-multi-thread", "sync", "stream", "time" ]

[features]
default = []
frame = []
