[package]
name = "rsocket_rust"
version = "0.7.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "rsocket-rust is an implementation of the RSocket protocol in Rust."

[dependencies]
log = "0.4.13"
bytes = "1.0.1"
futures = "0.3.10"
lazy_static = "1.4.0"
async-trait = "0.1.42"
dashmap = "4.0.2"
thiserror = "1.0.23"
anyhow = "1.0.38"
async-stream = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.19"

[dependencies.tokio]
version = "1.0.1"
default-features = false
features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ]

[features]
default = []
frame = []
